# email-reader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tutorial.ipynb
email_parser/: __init__.py  decoder.py  parser.py  tool.py  types.py
scripts/: fetch_message.py
tests/: test_parser.py
